fix scrollbar

--- a/Code/CarpentryWorkshopClient/src/view/scss/index.scss
+++ b/Code/CarpentryWorkshopClient/src/view/scss/index.scss
@@ -1207,3 +1207,20 @@ i .logo-responsive {
   padding: 0 !important;
   border-radius: 0 !important;
 }
+.department-scroll {
+  display: flex;
+  gap: 26px;
+  width: 100%;
+  flex-direction: column;
+  max-height: 400px;
+  overflow: hidden;
+  overflow-y: auto;
+}
+.department-scroll::-webkit-scrollbar-thumb {
+  background-color: unset !important;
+  background-image: unset !important;
+}
+.department-scroll::-webkit-scrollbar-track {
+  background-color: unset !important;
+  -webkit-box-shadow: unset !important;
+}
